vlib/v/checker/tests/empty_map_err.out
vlib/v/checker/tests/empty_map_err.vv:1:9: error: invalid empty map initilization syntax, use e.g. map[string]int{} instead
    1 | m := map{}
      |         ~~
    2 | m[0] = "asdf"
vlib/v/checker/tests/empty_map_err.vv:2:2: error: type `void` does not support indexing
    1 | m := map{}
    2 | m[0] = "asdf"
      |  ~~~
