vlib/v/checker/tests/empty_map_err.vv
m := map{}
m[0] = "asdf"
